Change rename selection to small text to correspond with the other actions.

--- a/website/app/application/core/projects/project/files/file-edit-controls.html
+++ b/website/app/application/core/projects/project/files/file-edit-controls.html
@@ -10,7 +10,7 @@
             </span>
     </li>
     <li ng-if="!ctrl.renameActive">
-        <a ng-click="ctrl.renameActive = !ctrl.renameActive" class="text-uppercase">rename</a>
+        <a ng-click="ctrl.renameActive = !ctrl.renameActive" class="text-uppercase small">rename</a>
     </li>
     <li ng-if="!ctrl.renameActive">
         <a ng-href="{{ctrl.downloadSrc()}}"
