--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -1,24 +1,33 @@
-<div class="row" style="margin-top: 20px;">
-    <div class="col-xs-4">
-        <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
-            <div class="row">
-                <div style="text-align: center; margin-top: 20px;">
-                    <button ng-click="processlist.chooseTemplate()" class="btn-details-container btn-process btn btn-default"> create</button>
-                </div>
+<div class="row" >
+    <div class="col-xs-4 card card-dark card-left card-side-bar">
+        <div class="row">
+            <div class="card-header text-center">
+                <button ng-click="ctrl.chooseTemplate()" class="btn-details-container btn-process btn btn-default"> create</button>
+
             </div>
-            <ul  class="list-group">
-                <li ui-sref="projects.project.processes.list.view({'process_id': process.id})"
-                    ng-class="{'process': current.id === process.id}"
-                    class="list-group-item pointer"
-                    ng-repeat="process in processlist.processes"
-                        ng-click="processlist.viewProcess(process)">
-                    <img src="assets/img/splash/process-icon.png" style="height: 35px;padding-bottom: 10px;">
-                    {{process.name}}
-                </li>
-            </ul>
         </div>
+
+        <ul ng-if="ctrl.processes.length !== 0" class="list-group">
+            <li class="list-group-item pointer"
+                ng-repeat="p in ctrl.processes"
+                ng-class="{active: ctrl.current.id === p.id}"
+                ng-click="ctrl.viewProcess(p)">
+                <b class="list-group-item-heading">{{p.name | limitTo: 40 }}</b>
+
+                <div class="truncate-text" ta-bind ng-model="p.what" class="small"></div>
+                <div class="row small" style="padding-top: 5px;">
+                            <span class="space-left"><i
+                                    class="fa fa-fw fa-cubes sample"></i>4</span>
+                    <span class="space-left"><i class="fa fa-fw fa-files-o file"></i>6 </span>
+                </div>
+            </li>
+        </ul>
+
+        <h4 ng-if="ctrl.processes.length === 0" class="text-center text-uppercase">
+            - No Processes -
+        </h4>
     </div>
-    <div class="col-xs-8" stylex="margin-left: 10px;">
+    <div class="col-xs-8 card-right no-padding">
         <div ui-view></div>
     </div>
 </div>
