--- a/website/app/application/core/projects/project/files/processes.html
+++ b/website/app/application/core/projects/project/files/processes.html
@@ -2,17 +2,27 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>Selected</th>
+            <th>Input</th>
+            <th>Output</th>
             <th>Name</th>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="process in ctrl.processes">
             <td>
-                <i ng-if="process.selected" class="fa fa-2x fa-fw fa-check text-success"></i>
+                <a ng-click="process.input = !process.input">
+                    <i ng-if="process.input" class="fa fa-2x fa-fw fa-check text-success"></i>
+                    <i ng-if="!process.input" class="fa fa-2x fa-fw fa-square-o"></i>
+                </a>
             </td>
             <td>
-                <a ng-click="process.selected = !process.selected">{{process.name}}</a>
+                <a ng-click="process.output = !process.output">
+                    <i ng-if="process.output" class="fa fa-2x fa-fw fa-check text-success"></i>
+                    <i ng-if="!process.output" class="fa fa-2x fa-fw fa-square-o"></i>
+                </a>
+            </td>
+            <td>
+                {{process.name}}
             </td>
         </tr>
         </tbody>
