--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -29,9 +29,10 @@
             <div class="content-tab">
                 <ul class="nav nav-tabs process-border">
                     <li ng-class="{active:view.isSet('setup')}">
-                        <a ng-click="view.setTab('setup')"><b><i class="fa fa-fw fa-gear"></i>SETUP</b></a></li>
-                    <li ng-class="{active:view.isSet('samples')}"><a ng-click="view.setTab('samples')"><b><i class="fa fa-fw fa-cubes"></i>SAMPLES</b></a></li>
-                    <li ng-class="{active:view.isSet('files')}"><a  ng-click="view.setTab('files')"><b><i class="fa fa-fw fa-copy"></i>FILES</b></a>
+                        <a ng-click="view.setTab('setup')"><b><i class="fa fa-fw fa-gear"></i>SETUP ({{view.process.setup[0].properties.length}})</b></a></li>
+                    <li ng-class="{active:view.isSet('samples')}"><a ng-click="view.setTab('samples')"><b><i class="fa fa-fw fa-cubes"></i>SAMPLES
+                        ({{view.process.samples.length}})</b></a></li>
+                    <li ng-class="{active:view.isSet('files')}"><a  ng-click="view.setTab('files')"><b><i class="fa fa-fw fa-copy"></i>FILES ({{view.process.files_used.length + view.process.files_produced.length}})</b></a>
                     </li>
                 </ul>
                 <div class="tab-content clearfix">
