Note and sample link is not implemented yet. Don't show the choice to the user.

--- a/website/app/application/core/projects/project/files/file-edit-controls.html
+++ b/website/app/application/core/projects/project/files/file-edit-controls.html
@@ -25,8 +25,8 @@
         </a>
         <ul class="dropdown-menu" role="menu">
             <li><a class="text-uppercase" ng-click="ctrl.linkTo('processes')">processes</a></li>
-            <li><a class="text-uppercase" ng-click="ctrl.linkTo('samples')">samples</a></li>
-            <li><a class="text-uppercase" ng-click="ctrl.linkTo('notes')">notes</a></li>
+            <li ng-if="false"><a class="text-uppercase" ng-click="ctrl.linkTo('samples')">samples</a></li>
+            <li ng-if="false"><a class="text-uppercase" ng-click="ctrl.linkTo('notes')">notes</a></li>
         </ul>
     </li>
     <li ng-if="!ctrl.renameActive" class="dropdown">
