Create a tabs directive and start moving all the other tab element displays under this tab.

--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -9,7 +9,7 @@
         </ul>
 
         <div class="row">
-           <file-description file="ctrl.file"></file-description>
+            <file-description file="ctrl.file"></file-description>
         </div>
 
         <div class="row">
@@ -23,7 +23,9 @@
         </div>
 
         <div class="row">
-            <file-notes file="ctrl.file"></file-notes>
+            <div class="section">
+                <detail-tabs item="ctrl.file"></detail-tabs>
+            </div>
         </div>
     </div>
 </div>
