--- a/website/app/index.html
+++ b/website/app/index.html
@@ -182,6 +182,14 @@
 <script src="application/directives/on-enter.js"></script>
 <script src="application/directives/confirm-click-directive.js"></script>
 <script src="application/directives/edit-note.js"></script>
+<script src="application/directives/detail-tabs.js"></script>
+<script src="application/directives/setup-details.js"></script>
+<script src="application/directives/processes-list.js"></script>
+<script src="application/directives/samples-list.js"></script>
+<script src="application/directives/notes-list.js"></script>
+<script src="application/directives/files-list.js"></script>
+<script src="application/directives/reviews-list.js"></script>
+<script src="application/directives/measurements-list.js"></script>
 <script src="application/services/file-type-service.js"></script>
 <script src="application/services/user-service.js"></script>
 <script src="application/services/alert-service.js"></script>
