Make question understandable.

--- a/website/app/application/core/projects/project/processes/edit.html
+++ b/website/app/application/core/projects/project/processes/edit.html
@@ -15,7 +15,7 @@
                         </textarea>
                 </div>
                 <br>
-                Why did you do?
+                Why did you perform this process?
                 <div class="row">
                         <textarea placeholder="Why" ng-model="edit.template.why" class="form-control col-xs-8">
                         </textarea>
