Add service and directives for selectedItems.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -176,6 +176,8 @@
 <script src="application/core/projects/project/modal/modal-processes-directive.js"></script>
 <script src="application/core/projects/project/modal/modal-samples-directive.js"></script>
 <script src="application/core/projects/project/modal/modal-files-directive.js"></script>
+<script src="application/directives/select-items-processes.js"></script>
+<script src="application/directives/select-items-samples.js"></script>
 <script src="application/directives/text-editor-directive.js"></script>
 <script src="application/directives/paged-directive.js"></script>
 <script src="application/directives/mc-flow-button.js"></script>
@@ -190,6 +192,7 @@
 <script src="application/directives/files-list.js"></script>
 <script src="application/directives/reviews-list.js"></script>
 <script src="application/directives/measurements-list.js"></script>
+<script src="application/services/select-items-service.js"></script>
 <script src="application/services/file-type-service.js"></script>
 <script src="application/services/user-service.js"></script>
 <script src="application/services/alert-service.js"></script>
