File selection skeleton.

--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -8,12 +8,10 @@
         <div class="row">
             <file-upload-panel></file-upload-panel>
         </div>
-        <div ng-if="files.gridShowingFlag"
-             ag-grid="files.gridOptions"
+        <div ng-if="files.gridShowingFlag" ag-grid="files.gridOptions"
              class="ag-file-browser">
         </div>
-        <div ng-if="!files.gridShowingFlag"
-             ag-grid="files.gridOptions"
+        <div ng-if="!files.gridShowingFlag" ag-grid="files.gridOptions"
              class="ag-file-browser">
         </div>
     </div>
