--- a/website/app/index.html
+++ b/website/app/index.html
@@ -178,6 +178,7 @@
 <script src="application/core/projects/project/modal/modal-files-directive.js"></script>
 <script src="application/directives/select-items-processes.js"></script>
 <script src="application/directives/select-items-samples.js"></script>
+<script src="application/directives/select-items-files.js"></script>
 <script src="application/directives/text-editor-directive.js"></script>
 <script src="application/directives/paged-directive.js"></script>
 <script src="application/directives/mc-flow-button.js"></script>
