--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -1,26 +1,30 @@
 <div>
     <div class="modal-header">
-        <h3 class="modal-title">Choose Template</h3>
+        <h3 class="modal-title">Choose Process</h3>
     </div>
     <br>
 
     <div class="row">
-        <input type="text" ng-model="search" class="col-xs-12"
-               placeholder="Search templates...">
+        <div class="col-xs-12">
+            <input type="text" ng-model="search" class="form-control"
+                   placeholder="Search processes...">
+        </div>
     </div>
-    <div ng-if="true" class="modal-body">
+    <div class="modal-body">
         <div class="list-group">
-            <a  ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
-               class="list-group-item"
+            <div  ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
+               class="pointer list-group-item"
                ng-repeat="template in templates | orderBy:'name' | filter:search">
                 <h4 class="list-group-item-heading">{{template.name}}</h4>
+
                 <ul class="list-unstyled">
                     <li>Description: {{template.description}}</li>
                     <li ng-if="template.does_transform" class="text-danger">
                         This template transforms samples.
                     </li>
+                    <li ng-click="viewSetUp(template)">View SetUp</li>
                 </ul>
-            </a>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
