--- a/website/app/index.html
+++ b/website/app/index.html
@@ -242,6 +242,7 @@
 <script src="application/core/components/properties/properties.js"></script>
 <script src="application/services/project-nav-bar-state-service.js"></script>
 <script src="application/core/projects/project/processes/transformation-controller.js"></script>
+<script src="application/core/projects/project/processes/prefill-controller.js"></script>
 <script src="application/core/projects/project/processes/sidebar/sidebar-samples-directive.js"></script>
 <script src="application/core/projects/project/processes/sidebar/sidebar-process-details-directive.js"></script>
 <script src="application/core/projects/project/processes/sidebar/sidebar-setup-directive.js"></script>
