--- a/website/app/application/core/projects/project/processes/prefill.html
+++ b/website/app/application/core/projects/project/processes/prefill.html
@@ -1,48 +1,117 @@
-    <div class="row">
-        <div class="col-xs-8" stylex="margin-left: 10px;">
-            <div class="row">
-                <div class="col-xs-8">
-                    Name your process
-                    <div class="row">
-                        <input ng-model="ctrl.template.name" class="form-control" style="width: 350px;">
-                    </div>
-                    <br>
-                    How would you describe your process?
-                    <div class="row">
-                        <textarea placeholder="What" ng-model="ctrl.template.what" class="form-control col-xs-8">
-                        </textarea>
-                    </div>
-                    <br>
-                    Why did you do?
-                    <div class="row">
-                        <textarea placeholder="Why" ng-model="ctrl.template.why" class="form-control col-xs-8">
-                        </textarea>
-                    </div>
-                    <br>
+<div class="row">
+    <div class="col-xs-8">
+        <div class="row">
+            <div class="col-xs-8">
+                Name your process
+                <div class="row">
+                    <input ng-model="ctrl.template.name" class="form-control">
+                </div>
+                SetUp:
+                <div class="row" ng-repeat="setting in ctrl.template.setup.settings[0].properties">
+                    <div ng-switch="setting.property._type">
+                        <!--------- number --------->
+                        <div ng-switch-when="number">
+                            <label class="col-xs-3 control-label">
+                                {{::setting.property.name}}
+                                <i ng-if="setting.property.required"
+                                   class="fa fa-fw fa-asterisk text-danger"></i>
+                            </label>
 
-                    <div class="row">
-                        <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span style="color:#3a9ee3"><a
-                            ng-click="ctrl.setUp()">Setup</a></span>
+                            <div class="col-xs-6">
+                                <div class="col-xs-8">
+                                    <input type="number"
+                                           name="numberInput"
+                                           step="any"
+                                           class="form-control"
+                                           ng-required="setting.property.required"
+                                           ng-model="setting.property.value">
+
+                                    <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
+                                         ng-messages="settingForm.numberInput.$error" class="errors">
+                                        <div ng-message="number">Please enter number.</div>
+                                        <div ng-message="required">Its a required field.</div>
+                                    </div>
+                                </div>
+                                <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
+                            <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
+                                <select ng-model="setting.property.unit" data-placeholder="Choose"
+                                        class="form-control"
+                                        ng-required="setting.property.required">
+                                    <option value="{{choice}}"
+                                            ng-repeat="choice in setting.property.units">
+                                        {{ choice }}
+                                    </option>
+                                </select>
+                            </span>
+                                <span class="help-block">{{::setting.property.description}}</span>
+                            </div>
+                        </div>
+
+                        <!--------- selection --------->
+                        <div ng-switch-when="selection"><label class="col-xs-3 control-label"> {{::setting.property.name}}
+                            <i ng-if="setting.property.required" class="fa fa-fw fa-asterisk text-danger"></i> </label>
+
+                            <div class="col-xs-6">
+                                <div class="col-xs-8"><select ng-model="setting.property.value" data-placeholder="Choose"
+                                                              name="selectInput" class="form-control"
+                                                              ng-required="setting.property.required">
+                                    <option value="{{choice.value}}" ng-repeat="choice in setting.property.choices">
+                                        {{ choice.name }}
+                                    </option>
+                                </select>
+
+                                    <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
+                                         ng-messages="settingForm.selectInput.$error" class="errors">
+                                        <div ng-message="required">It's a required field.</div>
+                                    </div>
+                                </div>
+                                <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
+                            <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
+                                <select ng-model="setting.property.unit" data-placeholder="Choose" class="form-control"
+                                        ng-required="setting.property.required">
+                                    <option value="{{choice}}" ng-repeat="choice in setting.property.units"> {{ choice}}
+                                    </option>
+                                </select>
+                            </span> <span class="help-block">{{::setting.property.description}}</span></div>
+                        </div>
+                        <!--------- string --------->
+                        <div ng-switch-when="string"><label class="col-xs-3 control-label"> {{::setting.property.name}}
+                            <i ng-if="setting.property.required" class="fa fa-fw fa-asterisk text-danger"></i> </label>
+
+                            <div class="col-xs-6">
+                                <input type="text" name="stringInput" class="form-control"
+                                       name="stringInput" ng-required="setting.property.required"
+                                       ng-model="setting.property.value">
+
+                                <div ng-if="mainSettingForm.$submitted || mainSettingForm.$touched"
+                                     ng-messages="settingForm.stringInput.$error" class="errors">
+                                    <div ng-message="required">It's a required field.</div>
+                                    <div ng-message="text">It's a text field.</div>
+                                </div>
+                                <span class="help-block">{{::setting.property.description}}</span></div>
+                        </div>
+                        <!--------- unknown type --------->
+                        <div ng-switch-default><span>Unknown template type {{setting.property._type}}</span></div>
                     </div>
-                    <br>
-                    <hr class="divider"/>
-                    <div class="row">
-                        <br>
-                        <div class="col-xs-3">
-                            <button ng-click="cancel()"
-                                    class="btn-details-container btn btn-default btn btn-cancel">
-                                Cancel
-                            </button>
-                        </div>
-                        <div class="col-xs-3">
-                            <button ng-click="createProcess()"
-                                    ng-disabled="isProcessing"
-                                    class=" btn btn-default btn-process btn-details-container">Submit
-                            </button>
-                        </div>
+                </div>
+                <br>
+                <hr class="divider"/>
+                <div class="row">
+                    <div class="col-xs-3">
+                        <button ng-click="cancel()"
+                                class="btn-details-container btn btn-default btn btn-cancel">
+                            Cancel
+                        </button>
+                    </div>
+                    <div class="col-xs-3">
+                        <button ng-click="createProcess()"
+                                ng-disabled="isProcessing"
+                                class=" btn btn-default btn-process btn-details-container">Submit
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
