--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -10,6 +10,8 @@
                    placeholder="Search processes...">
         </div>
     </div>
+    <br>
+
     <div class="row">
         <ul class="nav nav-tabs">
             <li ng-class="{active: isActive('all')}"><a ng-click="setActive('all')" class="text-uppercase">All
@@ -25,28 +27,32 @@
                     <div ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
                          class="pointer list-group-item"
                          ng-repeat="template in templates | orderBy:'name' | filter:search">
-                        <h4 class="list-group-item-heading">{{template.name}}
-                            <span ng-if="template.isFavorite">
-                                <i class="fa fa-fw fa-star pull-right" style="color: #cdcc44"></i>
-                            </span>
-                            <span ng-click="addToFavourite(template)" ng-if="!template.isFavorite">
-                                <i class="fa fa-fw fa-star-o pull-right"></i>
-                            </span>
-                        </h4>
-
-                        <ul class="list-unstyled">
-                            <li>Description: {{template.description}}
-                            </li>
-                            <li ng-if="template.does_transform" class="text-danger">
-                                This template transforms samples.
-                            </li>
-                            <li>
-                                <span><button class="btn" ng-click="viewSetUp(template)">SetUp</button></span>
-                                <span><button class="btn" ng-click="preFill(template)"><i
-                                        class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
-                                </button> </span>
-                            </li>
-                        </ul>
+                        <div class="row">
+                            <div class="col-xs-7">
+                                <div class="list-group-item-heading">{{template.name}}</div>
+                                <div ng-if="template.does_transform">
+                                    <label class="label label-default">Transforms Sample</label>
+                                </div>
+                                <div class="row">
+                                    Description: {{template.description}}
+                                </div>
+                            </div>
+                            <div class="col-xs-5">
+                                <div ng-if="template.isFavorite">
+                                    <i class="fa fa-fw fa-star pull-right"></i>
+                                </div>
+                                <div ng-click="addToFavourite(template)" ng-if="!template.isFavorite">
+                                    <i class="fa fa-fw fa-star-o pull-right"></i>
+                                </div>
+                                <div class="row">
+                                    <button class="btn btn-info" ng-click="viewSetUp(template)">
+                                        <i class="fa fa-fw fa-gear"></i>SetUp</button>
+                                    <button class="btn btn-info" ng-click="preFill(template)"><i
+                                            class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -80,3 +86,4 @@
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
     </div>
+</div>
